--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,128 @@
-h1{
-    color: aquamarine
+
+
+html, body, div, span, applet, object, iframe,
+h1, h2, h3, h4, h5, h6, p, blockquote, pre,
+a, abbr, acronym, address, big, cite, code,
+del, dfn, em, img, ins, kbd, q, s, samp,
+small, strike, strong, sub, sup, tt, var,
+b, u, i, center,
+dl, dt, dd, ol, ul, li,
+fieldset, form, label, legend,
+table, caption, tbody, tfoot, thead, tr, th, td,
+article, aside, canvas, details, embed, 
+figure, figcaption, footer, header, hgroup, 
+menu, nav, output, ruby, section, summary,
+time, mark, audio, video {
+	margin: 0;
+	padding: 0;
+	border: 0;
+	font-size: 100%;
+	font: inherit;
+	vertical-align: baseline;
+}
+/* HTML5 display-role reset for older browsers */
+article, aside, details, figcaption, figure, 
+footer, header, hgroup, menu, nav, section {
+	display: block;
+}
+body {
+	line-height: 1;
+}
+ol, ul {
+	list-style: none;
+}
+blockquote, q {
+	quotes: none;
+}
+blockquote:before, blockquote:after,
+q:before, q:after {
+	content: '';
+	content: none;
+}
+table {
+	border-collapse: collapse;
+	border-spacing: 0;
+}
+
+
+/* 
+header{
+    background-color: red;
+    height: 20px;
+} */
+
+section{
+    background: url(../img/main_2.png)  no-repeat center center fixed;
+    -webkit-background-size: cover; 
+    -moz-background-size: cover; 
+    -o-background-size: cover; 
+    background-size: cover;
+    height: 1000px;
+    width: 100%;
+    font-family: 'Nanum Myeongjo', serif;
+}
+
+nav{
+    background-color: blue;
+}
+
+footer{
+    background-color: yellow;
+}
+
+
+
+#big{
+    position: absolute;
+    font-size: 50px;
+    color:#fff;
+    margin-left: 50px;
+    margin-top: 350px;
+    z-index: 2;
+}
+
+#s{
+    position: absolute;
+    font-size: 20px;
+    color:#fff;
+    margin-left: 210px;
+    margin-top: 310px;
+    z-index: 2;
+
+}
+
+#cir_1{
+    background: #b9433b;
+    width: 15px;
+    height: 15px;
+    border-radius: 200%;
+    position: absolute;
+    margin-top: 315px;
+    z-index: 2;
+    margin-left: 50px;
+    
+}
+.line{
+    border-bottom: solid 1px #fff;
+    width: 150px;
+    margin-top: 321px;
+    margin-left: 55px;
+    
+    position: absolute;
+}
+
+#but_1{
+    color:#fff;
+    width: 100px;
+    height: 20px;
+    text-align: center;
+    position: absolute;
+    margin-top: 420px;
+    margin-left: 50px;
+    transition-duration: 1s;
+}
+
+#but_1:hover{
+background-color: #b9433b;
+translate: all 0.3s;
 }
