--- a/css/style.css
+++ b/css/style.css
@@ -60,6 +60,7 @@ q:before, q:after {
     .c_m_10 {width:83.33%;}
     .c_m_11 {width:91.66%;}
     .c_m_12 {width:100%;}
+  
 }
 
 @media only screen and (min-width:768px) {
@@ -87,32 +88,10 @@ header{
     height: 0;
     width: 100%;
     position: fixed;
-
+    z-index: 9999999;
 }
 
-#menu{
 
-    list-style: none;
-    color:#fff;
-    display: inline-block;
-    font-size: 20px;
-    margin-right: 20px;
-    margin-top: 10px;
-    z-index: 10000;
-    float: right;
-}
-
-#menu li{
-    text-decoration: none;
-    float: right;
-    margin-left: 20px;
-    z-index: 10000;
-   
-}
-a{
-    text-decoration: none;
-    color:#fff;
-}
 .title{
     background: url(../img/bg_2.jpg)  no-repeat center center fixed;
     -webkit-background-size: cover; 
@@ -147,7 +126,7 @@ header img{
     font-size: 20px;
     color:#fff;
     margin-left: 210px;
-    margin-top: 310px;
+    margin-top: 300px;
     z-index: 2;
 
 }
@@ -158,7 +137,7 @@ header img{
     height: 15px;
     border-radius: 200%;
     position: absolute;
-    margin-top: 315px;
+    margin-top: 305px;
     z-index: 2;
     margin-left: 50px;
     
@@ -166,19 +145,20 @@ header img{
 .line{
     border-bottom: solid 1px #fff;
     width: 150px;
-    margin-top: 321px;
+    margin-top: 312px;
     margin-left: 55px;
     
     position: absolute;
 }
 
 #but_1{
+    font-weight: 100;
     color:#fff;
     width: 100px;
     height: 20px;
     font-family: 'Nanum Gothic', sans-serif;
     position: absolute;
-    margin-top: 570px;
+    margin-top: 575px;
     margin-left: 50px;
     transition-duration: 1s;
 }
@@ -191,7 +171,7 @@ translate: all 0.3s;
 #can{
     position: absolute;
     margin-top: 300px;
-    margin-left: 330px;
+    margin-left: 335px;
 }
 
 
@@ -249,11 +229,13 @@ translate: all 0.3s;
   }
 
   #info{
-      background-color: #181e21;
+      background: url(../img/bg_1.jpg)no-repeat center center fixed;
+   
       height: 800px;
   }
 
   #day{
+      
     position: absolute;
     margin-top: 420px;
     margin-left: 50px;
@@ -267,8 +249,9 @@ translate: all 0.3s;
  margin-left: 50px;
  margin-top: 450px;
  font-size: 10pt;
- line-height: 15pt;
+ line-height: 17pt;
  font-family: 'Nanum Gothic', sans-serif;
+ font-weight: 100;
  width: 800px;
   }
 
@@ -279,56 +262,164 @@ translate: all 0.3s;
 
   #movie_img{
       position: absolute;
-      margin-top: 120px;
+      margin-top: 100px;
       margin-left: 950px;
       box-shadow: 2px 2px 25px black;
       float: right;
   }
   
   #info{
+
       clear: both;
       color:#fff;
     font-family: 'Nanum Gothic', sans-serif;
-    
+    position: relative;
   }
-
+#content{
+    padding-top: 60px;
+}
   #title{
+  
     box-sizing: border-box;
       float: left;
     font-family: 'Nanum Myeongjo', serif;
     z-index: 1;
       position: absolute;
       font-size: 50px;
-      margin-top: 8%;
+      margin-top: 130px;
       line-height: 60pt;
-      margin-left: 3%;
+      margin-left: 150px;
       width: 750px;
-      height: 600px;
+  
+      display: inline-block;
   }
+  #video{
+     display: inline-block;
+  margin-top:500px;
+     margin-left: 150px;
+     margin-right: auto;
+}
 
   #info_1{
+
     float: left;
     position: absolute;
     font-size: 10pt;
-    margin-top: 25%;
+   margin-top: 310px;
     line-height: 20pt;
-    margin-left: 3%;
+    margin-left: 150px;
   }
   #box_1{
       box-sizing: border-box;
-      position: absolute;
-      width:720px;;
-      height: 3px;
-      margin-top: 10%;
-      margin-left: 25%;
-      background: linear-gradient(312deg, rgba(129,17,19,1) 0%, rgba(39,61,85,1) 100%);
+    position: absolute;
+    margin-top: 100px;
+    margin-left: 150px;
+      width:1200px;
+      height:550px;
+      border-bottom: solid 2px  rgb(129,17,19);
+      border-top: solid 2px  rgb(129,17,19);
+
+    
   }
 
   #colorBox{
       background-color: #758490;
-      width: 10%;
+      width: 145px;
       height:35px;
       position: absolute;
-      margin-top: 15%;
-      margin-left: 3%;
+      margin-top: 235px;
+      margin-left: 150px;
+      display: inline-block
   }
+
+  @media ( max-width: 600px ) {
+body{
+      float: none;
+      width: 50%;
+    }
+
+    #box_1{height:650px;}
+
+    #video{
+
+        margin-top:600px; 
+    }
+  }
+  
+
+  html,
+  body {
+    width: 100%;
+    height: 100%;
+    
+  }
+
+  #logo{
+
+float: right;
+
+  }
+
+
+  .open,
+  .close {
+    display: inline-block;
+    padding: 0;
+   
+    cursor: pointer;
+    font-size: 2rem;
+
+    color: #fff;
+    text-decoration: none;
+    transition: 0.5s;
+  }
+  
+  .overlay {
+    position: fixed;
+    width: 0;
+    top: 0;
+    background-color: #333;
+    opacity: 0.7;
+    overflow-x: hidden;
+    height: 100%;
+    transition: 0.5s;
+  }
+  
+  .overlay-content {
+    text-align: center;
+    position: relative;
+    width: 100%;
+    padding-top: 200px;
+    margin-top: 30px;
+  }
+  
+  .overlay-content a {
+    font-size: 2rem;
+    color: #fff;
+    display: block;
+    padding: 35px;
+    margin-bottom: 4px;
+    text-decoration: none;
+    transition: 0.3s;
+    position: relative;
+  }
+  .overlay-content a:after {
+    content: "";
+    position: absolute;
+    bottom: 0;
+    left: 50%;
+    width: 0%;
+    transform: translateX(-50%);
+    height: 3px;
+    background: #fff;
+    transition: 0.3s;
+    display: block;
+  }
+  .overlay-content a:hover {
+    color: #ff9f1a;
+  }
+  
+  .overlay-content a:hover:after {
+    width: 25%;
+  }
+  
