--- a/css/style.css
+++ b/css/style.css
@@ -357,6 +357,7 @@ body{
   #logo{
 
 float: right;
+margin-right: 20px
 
   }
 
@@ -365,7 +366,7 @@ float: right;
   .close {
     display: inline-block;
     padding: 0;
-   
+   margin-left: 20px;
     cursor: pointer;
     font-size: 2rem;
 
@@ -397,7 +398,7 @@ float: right;
     font-size: 2rem;
     color: #fff;
     display: block;
-    padding: 35px;
+    padding: 20px;
     margin-bottom: 4px;
     text-decoration: none;
     transition: 0.3s;
